--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
     "node-binance-api": "^0.12.4",
     "plotly.js": "^1.58.4",
     "react": "^17.0.1",
